test/corpus/mandatory_manpath.txt
===
simple
===

MANDATORY_MANPATH /sus/path

---

(file
	(mandatory_manpath
		manpath_element: (path)
	)
)

===
with multiple spaces
===

MANDATORY_MANPATH      /another-very/sus_path.txt

---

(file
	(mandatory_manpath
		manpath_element: (path)
	)
)

===
spaces in path
===

	MANDATORY_MANPATH /dir\ one/dir\ two

---

(file
	(mandatory_manpath
		manpath_element: (path)
	)
)

===
with trailing `/`
===

MANDATORY_MANPATH /dir1/dir2/

---

(file
	(mandatory_manpath
		manpath_element: (path)
	)
)
